Fix font rendering on Safari.

--- a/tamlynscore/sass/_typography.sass
+++ b/tamlynscore/sass/_typography.sass
@@ -12,6 +12,7 @@ body
 
 h1, h2, h3, h4, h5, h6
   font-family: $font-header
+  font-weight: normal
   color: $darkbluegrey
   margin: 8px 0 10px
   text-align: center
